# 2-hong-community-chatbot

./: .gitignore  Function_Specification.md  README.md  Recommend_Chatbot_Function_Specification.md  pyproject.toml  requirements.txt
frontend/: app.js  index.html  styles.css
scripts/: build_index.py  run_eval.py
src/: __init__.py  config.py  main.py  schemas.py
src/chat/: memory.py  prompts.py  service.py
src/evaluation/: metrics.py  run_eval.py
src/recommender/: engine.py  indexer.py  query_parser.py  ranker.py  session.py
