[project]
name = "2-hong-community-chatbot"
version = "0.1.0"
description = "Restaurant recommendation chatbot backend for 2-hong community"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
embedding = ["sentence-transformers>=3.0.0"]
gemini = ["google-genai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
